# indian_pizza_machine

./: .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  run_git_add_commit.bat  run_git_add_commit.ps1
backend/: .env.example  .gitignore  requirements.txt  test_basket_api.py  test_basket_llm.py  test_basket_no_target.py  test_system.py  trigger_ingest.py
backend/app/: __init__.py  basket_llm_no_target.py  create_basket.py  create_basket_llm.py  create_basket_no_target.py  filter_inputs.py  graph.py  main.py
backend/data/: options.json  stop_words.txt
backend/data/interim/: musk_polymarket_markets.parquet  musk_polymarket_outcomes_metadata.parquet  musk_weekly_tweet_estimates.parquet
backend/notebooks/: 1.0-vad-musk-keywords.ipynb  1.1-vad-musk-slugs.ipynb  1.2-vad-must-timeseries.ipynb  1.3-vad-musk-model-weekly.ipynb  vad-1.0-create-basket.ipynb
backend/src/: config.py  create_basket.py  data.py  main.py
docs/: DATA_PIPELINE_BASKET.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: d3-dispatch-shim.js  d3-scale-chromatic-shim.js  jerrypick-shim.js
nginx/: default.conf
scrapbook/: data_scraping.py  data_scraping2.py  experiments.ipynb  polymarket_data.py  polymarket_prices.csv
scripts/: start-backend.js
